--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@react-native-community/cli-doctor": "^11.3.5",
+    "@react-navigation/native": "^6.1.7",
     "react": "18.2.0",
-    "react-native": "0.72.1"
+    "react-native": "0.72.1",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
