feat: se agrega firebase

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,8 @@
 # Resolve react_native_pods.rb with node to allow for hoisting
+pod 'Firebase', :modular_headers => true
+pod 'FirebaseCoreInternal', :modular_headers => true
+pod 'GoogleUtilities', :modular_headers => true
+pod 'FirebaseCore', :modular_headers => true
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
     "react-native/scripts/react_native_pods.rb",
