--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,9 +77,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.reservatuhora"
+    namespace "cl.grupopi.reservatuhora"
     defaultConfig {
-        applicationId "com.reservatuhora"
+        applicationId "cl.grupopi.reservatuhora"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -122,8 +122,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
-    implementation(platform("com.google.firebase:firebase-bom:32.2.0"))
-    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation platform('com.google.firebase:firebase-bom:32.2.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
