--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/cli-doctor": "^11.3.5",
     "@react-native-firebase/app": "^18.2.0",
     "@react-native-firebase/auth": "^18.2.0",
+    "@react-native-firebase/firestore": "^18.3.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@rneui/base": "^0.0.0-edge.2",
