--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.gms.google-services' // <- Add this line
-project.ext.vectoricons = [
-        iconFontNames: [ 'MaterialCommunityIcons.ttf' ] // Name of the font files you want to copy
-]
+apply plugin: 'com.google.gms.google-services'
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
+//project.ext.vectoricons = [
+//        iconFontNames: [ 'MaterialCommunityIcons.ttf' ] // Name of the font files you want to copy
+//]
 /**
  * This is the configuration block to customize your React Native Android app.
  * By default you don't need to apply any configuration, just uncomment the lines you need.
