--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-safe-area-context": "^4.6.4",
